--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.5",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.7",
     "@types/lodash": "^4.14.195",
+    "@types/react-native-vector-icons": "^6.4.13",
     "@types/react-redux": "^7.1.25",
     "axios": "^1.4.0",
     "react": "18.2.0",
@@ -28,6 +31,7 @@
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screen": "^1.0.1",
     "react-native-screens": "^3.22.1",
+    "react-native-vector-icons": "^10.0.0",
     "react-navigation": "^4.4.4",
     "react-redux": "^8.1.1",
     "reactotron-mst": "3.1.4",
