demo load users

--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,2 @@
-API_BASE=xxxxxxaaaa
-REACT_APP_PREFIX_API=https://id.nxpos.vn/api
-REACT_APP_ENDPOINT=mobile-pos/v1
+REACT_APP_PREFIX_API=https://random-data-api.com/api
+REACT_APP_ENDPOINT=
