--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@types/lodash": "^4.14.195",
     "@types/react-native-vector-icons": "^6.4.13",
     "@types/react-redux": "^7.1.25",
+    "add": "^2.0.6",
     "axios": "^1.4.0",
     "react": "18.2.0",
     "react-native": "0.72.2",
     "react-native-dotenv": "^3.4.9",
+    "react-native-flip": "^0.2.2",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.7.1",
@@ -38,7 +40,8 @@
     "reactotron-mst": "3.1.4",
     "reactotron-react-js": "^3.3.7",
     "reactotron-react-native": "5.0.3",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
